<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sql_injection"
            android:icon="@drawable/ic_injection"
            android:title="@string/sql_injection"/>

        <item
            android:id="@+id/nav_vulnerable_web_view"
            android:icon="@drawable/ic_web"
            android:title="@string/vulnerable_web_view"/>

        <item
            android:id="@+id/nav_weak_cryptography"
            android:icon="@drawable/ic_encryption_key"
            android:title="@string/weak_cryptography"/>

        <item
            android:id="@+id/nav_deeplink_exploitation"
            android:icon="@drawable/ic_deeplink"
            android:title="@string/deeplink_exploitation"/>

        <item
            android:id="@+id/nav_root_detection"
            android:icon="@drawable/ic_android"
            android:title="@string/root_detection"/>

        <item
            android:id="@+id/nav_emulator_detection"
            android:icon="@drawable/ic_emulator_ban"
            android:title="@string/emulator_detection"/>

        <item
            android:id="@+id/nav_certificate_pinning"
            android:icon="@drawable/ic_certificate"
            android:title="@string/certificate_pinning"/>

        <item
            android:id="@+id/nav_insecure_content_provider"
            android:icon="@drawable/ic_content_provider"
            android:title="@string/insecure_content_provider"/>

        <item
            android:id="@+id/nav_file_provider_exploitation"
            android:icon="@drawable/ic_file"
            android:title="@string/file_provider_exploitation"/>

        <item
            android:id="@+id/nav_misconfigured_firebase_database"
            android:icon="@drawable/ic_firebase"
            android:title="@string/misconfigured_firebase_database"/>

        <item
            android:id="@+id/nav_native_library"
            android:icon="@drawable/ic_native_library"
            android:title="@string/native_library"/>

        <item
            android:id="@+id/nav_smali_patching"
            android:icon="@drawable/ic_patch"
            android:title="@string/smali_patching"/>

        <item
            android:id="@+id/nav_vulnerable_login"
            android:icon="@drawable/ic_login"
            android:title="@string/vulnerable_login"/>
    </group>
</menu>