<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="lab.insecuredroid.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main"/>

    <fragment
        android:id="@+id/nav_sql_injection"
        android:name="lab.insecuredroid.challenges.SQLInjection"
        android:label="@string/sql_injection"
        tools:layout="@layout/fragment_sql_injection"/>

    <fragment
        android:id="@+id/nav_vulnerable_web_view"
        android:name="lab.insecuredroid.challenges.VulnerableWebView"
        android:label="@string/vulnerable_web_view"
        tools:layout="@layout/fragment_vulnerable_web_view"/>

    <fragment
        android:id="@+id/nav_weak_cryptography"
        android:name="lab.insecuredroid.challenges.WeakCryptography"
        android:label="@string/weak_cryptography"
        tools:layout="@layout/fragment_weak_cryptography"/>

    <fragment
        android:id="@+id/nav_deeplink_exploitation"
        android:name="lab.insecuredroid.challenges.DeeplinkExploitation"
        android:label="@string/deeplink_exploitation"
        tools:layout="@layout/fragment_deeplink_exploitation"/>

    <fragment
        android:id="@+id/nav_root_detection"
        android:name="lab.insecuredroid.challenges.RootDetection"
        android:label="@string/root_detection"
        tools:layout="@layout/fragment_root_detection"/>

    <fragment
        android:id="@+id/nav_emulator_detection"
        android:name="lab.insecuredroid.challenges.EmulatorDetection"
        android:label="@string/emulator_detection"
        tools:layout="@layout/fragment_emulator_detection"/>

    <fragment
        android:id="@+id/nav_certificate_pinning"
        android:name="lab.insecuredroid.challenges.CertificatePinning"
        android:label="@string/certificate_pinning"
        tools:layout="@layout/fragment_certificate_pinning"/>

    <fragment
        android:id="@+id/nav_insecure_content_provider"
        android:name="lab.insecuredroid.challenges.InsecureContentProvider"
        android:label="@string/insecure_content_provider"
        tools:layout="@layout/fragment_insecure_content_provider"/>

    <fragment
        android:id="@+id/nav_file_provider_exploitation"
        android:name="lab.insecuredroid.challenges.FileProviderExploitation"
        android:label="@string/file_provider_exploitation"
        tools:layout="@layout/fragment_file_provider_exploitation"/>

    <fragment
        android:id="@+id/nav_misconfigured_firebase_database"
        android:name="lab.insecuredroid.challenges.MisconfiguredFirebaseDatabase"
        android:label="@string/misconfigured_firebase_database"
        tools:layout="@layout/fragment_misconfigured_firebase_database"/>

    <fragment
        android:id="@+id/nav_native_library"
        android:name="lab.insecuredroid.challenges.NativeLibrary"
        android:label="@string/native_library"
        tools:layout="@layout/fragment_native_library"/>

    <fragment
        android:id="@+id/nav_smali_patching"
        android:name="lab.insecuredroid.challenges.SmaliPatching"
        android:label="@string/smali_patching"
        tools:layout="@layout/fragment_smali_patching"/>

    <fragment
        android:id="@+id/nav_vulnerable_login"
        android:name="lab.insecuredroid.challenges.VulnerableLogin"
        android:label="@string/vulnerable_login"
        tools:layout="@layout/fragment_vulnerable_login"/>
</navigation>